# akari-mem

./: .env.example  .gitignore  README.md  STARTUP_GUIDE.md  api_server.py  benchmark.py  config.json  config.json.example  diagnose.py  diagnose_hang.py  embeddings.py  env_loader.py  migrate.py  pyproject.toml  rebuild_and_test.py  rerank.py  server.py  store.py  test_mcp.py  test_search.py
hooks/: session-start.py  user-prompt.py
